RESOLVED FIXED238029
[model] loading spinner doesn't show on iOS
https://bugs.webkit.org/show_bug.cgi?id=238029
Summary [model] loading spinner doesn't show on iOS
Antoine Quint
Reported 2022-03-17 11:03:23 PDT
[model] loading spinner doesn't show on iOS
Attachments
Patch (4.59 KB, patch)
2022-03-17 11:05 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2022-03-17 11:05:15 PDT
Antoine Quint
Comment 2 2022-03-17 11:05:20 PDT
Antoine Quint
Comment 3 2022-03-17 13:09:28 PDT
Note You need to log in before you can comment on or make changes to this bug.