[model] loading spinner doesn't show on iOS https://bugs.webkit.org/show_bug.cgi?id=238029 rdar://89698998

Reviewed by Dean Jackson.

We must wait until a WKModelView has non-zero bounds to create the backing ASVInlinePreview
so that the ARQL views are all sized to display the loading spinner correctly.

* UIProcess/ios/WKModelView.mm:
(-[WKModelView initWithModel:]):
(-[WKModelView createPreview]):
(-[WKModelView layoutSubviews]):
(-[WKModelView updateBounds]):


Canonical link: https://commits.webkit.org/248556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291431 268f45cc-cd09-0410-ab3c-d52691b4dbfc